// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WeatherHero > matches snapshot 1`] = `
<div
  class="flex w-full min-h-[150px] justify-between"
>
  <div
    class="flex flex-col justify-between"
  >
    <h3
      class="text-4xl font-semibold text-foreground"
    >
      Paris
    </h3>
    <div
      class="flex items-center gap-3"
    >
      <h1
        class="text-6xl font-semibold text-foreground"
      >
        22
        °C
      </h1>
      <button
        class="group p-2 rounded-full shadow transition-colors cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed hover:bg-yellow-50 bg-white"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-star w-5 h-5 transition-colors text-subtle"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
      </button>
    </div>
  </div>
  <img
    alt="Paris-weather-icon"
    class="w-36"
    src="/paris.png"
  />
</div>
`;

exports[`WeatherHero Component (unit) > matches snapshot 1`] = `
<div
  class="flex w-full min-h-[150px] justify-between"
>
  <div
    class="flex flex-col justify-between"
  >
    <h3
      class="text-4xl font-semibold text-foreground"
    >
      Maple Grove
    </h3>
    <div
      class="flex items-center gap-3"
    >
      <h1
        class="text-6xl font-semibold text-foreground"
      >
        -4
        °C
      </h1>
      <button
        class="group p-2 rounded-full shadow transition-colors cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed hover:bg-yellow-50 bg-white"
        data-testid="favorite-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-star w-5 h-5 transition-colors text-subtle"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
      </button>
    </div>
  </div>
  <img
    alt="Maple Grove-weather-icon"
    class="w-36"
    src="https://loremflickr.com/2559/364?lock=3849505351284108"
  />
</div>
`;

exports[`WeatherHero Component (unit/integration) > matches snapshot 1`] = `
<div
  class="flex w-full min-h-[150px] justify-between"
>
  <div
    class="flex flex-col justify-between"
  >
    <h3
      class="text-4xl font-semibold text-foreground"
    >
      Maple Grove
    </h3>
    <div
      class="flex items-center gap-3"
    >
      <h1
        class="text-6xl font-semibold text-foreground"
      >
        -4
        °C
      </h1>
      <button
        class="group p-2 rounded-full shadow transition-colors cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed hover:bg-yellow-50 bg-white"
        data-testid="favorite-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-star w-5 h-5 transition-colors text-subtle"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
      </button>
    </div>
  </div>
  <img
    alt="Maple Grove-weather-icon"
    class="w-36"
    src="https://loremflickr.com/2559/364?lock=3849505351284108"
  />
</div>
`;
